--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="Keywords" content="blog"/>
-    <meta name="Description" content="blog"/>
+    <meta name="Keywords" content="薛岚斌"/>
+    <meta name="Description" content="薛岚斌的博客"/>
     <title>Simple</title>
     <link rel="shortcut icon" href="/static/favicon.png"/>
     <link rel="stylesheet" type="text/css" href="main.css" />
@@ -32,7 +32,7 @@
     <div class="innermain" id="main">
     </div>
     <div class="footer">
-        <p>© Copyright 2014 by isnowfy, Designed by isnowfy</p>
+        <p>© Copyright 2016</p>
     </div>
 </div>
 <script src="main.js"></script>
